--- a/index.html
+++ b/index.html
@@ -4,68 +4,241 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Modul 1 HTML</title>
+
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ga+Maamli&display=swap"
+      rel="stylesheet"
+    /> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
+      integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    <header>
-      <a href="index.html">
-        <img src="images/barbershop-logo.png" alt="Barbershop logo" />
-      </a>
+    <header class="main-header">
+      <nav class="header-nav">
+        <a href="index.html" class="logo">
+          <img
+            class="logo"
+            src="images/barbershop-logo.png"
+            alt="Barbershop logo"
+            width="68"
+            height="55"
+          />
+        </a>
 
-      <nav>
-        <ul>
-          <li>
-            <a href="">About</a>
+        <ul class="header-list">
+          <li class="header-item">
+            <a href="" class="header-link header-link-active">About</a>
           </li>
-          <li>
-            <a href="">Services and Prices</a>
+          <li class="header-item">
+            <a href="" class="header-link">Services and Prices</a>
           </li>
-          <li>
-            <a href="">Barbers</a>
+          <li class="header-item">
+            <a href="" class="header-link">Barbers</a>
           </li>
-          <li>
-            <a href="">Contact</a>
+          <li class="header-item">
+            <a href="" class="header-link">Contact</a>
           </li>
         </ul>
       </nav>
 
-      <a href="tel:+38 044 111 11 11">+38 044 111 11 11</a>
-      <a href="https://goit.global/ro/contacts/" target="_blank"
-        >Book a Service</a
-      >
+      <a href="tel:+38 044 111 11 11" class="header-link">+38 044 111 11 11</a>
+      <button class="primary-button">Book a Service</button>
     </header>
 
     <main>
-      <section>
+      <section class="hero-section">
         <hr />
-        <span>A hair salon for men in Kyiv</span>
-        <h1>BarberShop</h1>
-        <p>
+        <span class="hero-subtitle">A hair salon for men in Kyiv</span>
+        <h1 class="hero-title">BarberShop</h1>
+        <p class="hero-description">
           We are experts in trendy men's haircuts. We work quickly, carefully,
           and tastefully.
         </p>
       </section>
 
-      <section>
-        <img src="images/about-image-1.png" alt="First Service" />
-        <img src="images/about-image-2.png" alt="Second Service" />
+      <section class="about-section">
+        <img
+          src="images/about-image-1.png"
+          alt="First Service"
+          width="270"
+          height="445"
+        />
+        <img
+          src="images/about-image-2.png"
+          alt="Second Service"
+          width="270"
+          height="445"
+        />
 
-        <span>
+        <span class="section-subtitle text-grey">
           <img src="images/linie-orizonatala.png" alt="Horizontal line" /> ABOUT
         </span>
-        <h1>The Best Barbershop in Your City</h1>
-        <h3>
+        <h2 class="section-title text-grey">
+          The Best Barbershop in Your City
+        </h2>
+        <h3 class="section-description">
           If you want to add more confidence to your image, you are definitely
           in the right place.
         </h3>
-        <p>
+        <p class="section-paragraph">
           We are a team that never rests on its laurels and yearns for change.
           And once you fall into the hands of our master, you will never be the
           same again. We are a team that is always on the same wavelength with
           clients. Therefore, we are always ready to improve everyone who comes
           to us!
         </p>
-        <button>book a service</button>
+        <button class="primary-button text-grey">book a service</button>
+      </section>
+
+      <section class="services-section">
+        <span class="section-subtitle">
+          <img src="images/linie-orizonatala.png" alt="Horizontal line" />
+          Spend time in the company of the best craftsmen
+        </span>
+        <h2 class="section-title">Services and Prices</h2>
+
+        <ul>
+          <li>
+            <span>Men's Haircut</span>
+            <span>from 300 UAH </span>
+          </li>
+          <li>
+            <span>Beard Trim</span>
+            <span>from 200 UAH</span>
+          </li>
+          <li>
+            <span>Mustache Trim</span>
+            <span>from 200 UAH</span>
+          </li>
+          <li>
+            <span>Straight Razor Shave</span>
+            <span>from 200 UAH</span>
+          </li>
+        </ul>
+
+        <ul>
+          <li>
+            <span>Trainee Haircut </span>
+            <span>from 50 UAH </span>
+          </li>
+          <li>
+            <span>Buzz Cut</span>
+            <span>from 200 UAH </span>
+          </li>
+          <li>
+            <span>Kids Haircut (&lt;12 y.o.)</span>
+            <span>from 300 UAH </span>
+          </li>
+          <li>
+            <span>Gray Coverage</span>
+            <span>from 200 UAH </span>
+          </li>
+        </ul>
+
+        <button type="button">Book a Service</button>
+      </section>
+
+      <section>
+        <ul>
+          <li>600 <sup>+</sup></li>
+          <li>50 <sup>+</sup></li>
+          <li>200 <sup>+</sup></li>
+          <li>100 <sup>+</sup></li>
+        </ul>
+        <span>
+          <img src="images/linie-orizonatala.png" alt="Horizontal line" />
+          <h2>Why do they come to us?</h2>
+          <p>
+            Only good things are said about us. But it is better to see and feel
+            1 time than to read 10 times.
+          </p>
+        </span>
+      </section>
+
+      <section id="barbers">
+        <img src="images/linie-orizonatala.png" alt="Horizontal line" />
+        <span>for true connoisseurs of the atmosphere</span>
+        <h2>Our Barbers</h2>
+
+        <ul>
+          <li>
+            <img
+              src="./images/our-barbers-john.jpg"
+              alt="Picture of John Smith from Our Barbers"
+              width="370"
+              height="346"
+            />
+            <h4>John Smith</h4>
+            <p>Extreme Barber</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-barbers-michele.jpg"
+              alt="Picture of Michele Doe from Our Barbers"
+              width="370"
+              height="346"
+            />
+            <h4>Michele Doe</h4>
+            <p>Extreme Barber</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-barbers-alan.jpg"
+              alt="Picture of Alan Black from Our Barbers"
+              width="370"
+              height="346"
+            />
+            <h4>Alan Black</h4>
+            <p>Extreme Barber</p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <span>In Latin, "barba" means "beard"</span>
+        <ul>
+          <li><img src="./images/trim-service.jpg" alt="" /></li>
+          <li><img src="./images/shave-service.jpg" alt="" /></li>
+          <li><img src="./images/massage-service.jpg" alt="" /></li>
+          <li><img src="./images/fade-service.jpg" alt="" /></li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Contacts</h2>
+        <address>
+          Main Street, 7A Kyiv, 08132 <br />
+          +38 044 111 11 11 <br />
+          barbershop@email.com <br />
+        </address>
       </section>
     </main>
+
+    <footer>
+      <span>&copy; Copyright 2022</span>
+      <a href="">Instagram</a>
+      <a href="">Youtube</a>
+    </footer>
   </body>
 </html>
