--- a/index.html
+++ b/index.html
@@ -35,128 +35,139 @@
   </head>
   <body>
     <header class="main-header">
-      <nav class="header-nav">
-        <a href="index.html" class="logo">
-          <img
-            class="logo"
-            src="images/barbershop-logo.png"
-            alt="Barbershop logo"
-            width="68"
-            height="55"
-          />
-        </a>
+      <div class="header-container container">
+        <nav class="header-nav">
+          <a href="index.html" class="logo">
+            <img
+              class="logo"
+              src="images/barbershop-logo.png"
+              alt="Barbershop logo"
+              width="68"
+              height="55"
+            />
+          </a>
 
-        <ul class="header-list">
-          <li class="header-item">
-            <a href="" class="header-link header-link-active">About</a>
-          </li>
-          <li class="header-item">
-            <a href="" class="header-link">Services and Prices</a>
-          </li>
-          <li class="header-item">
-            <a href="" class="header-link">Barbers</a>
-          </li>
-          <li class="header-item">
-            <a href="" class="header-link">Contact</a>
-          </li>
-        </ul>
-      </nav>
+          <ul class="header-list list">
+            <li class="header-item">
+              <a href="" class="header-link header-link-active link">About</a>
+            </li>
+            <li class="header-item">
+              <a href="" class="header-link link">Services and Prices</a>
+            </li>
+            <li class="header-item">
+              <a href="" class="header-link link">Barbers</a>
+            </li>
+            <li class="header-item">
+              <a href="" class="header-link link">Contact</a>
+            </li>
+          </ul>
+        </nav>
 
-      <a href="tel:+38 044 111 11 11" class="header-link">+38 044 111 11 11</a>
-      <button class="primary-button">Book a Service</button>
+        <a href="tel:+38 044 111 11 11" class="header-link"
+          >+38 044 111 11 11</a
+        >
+        <button class="primary-button">Book a Service</button>
+      </div>
     </header>
 
     <main>
-      <section class="hero-section">
-        <hr />
-        <span class="hero-subtitle">A hair salon for men in Kyiv</span>
-        <h1 class="hero-title">BarberShop</h1>
-        <p class="hero-description">
-          We are experts in trendy men's haircuts. We work quickly, carefully,
-          and tastefully.
-        </p>
+      <section class="hero-section section">
+        <div class="container">
+          <hr />
+          <span class="hero-subtitle">A hair salon for men in Kyiv</span>
+          <h1 class="hero-title">BarberShop</h1>
+          <p class="hero-description">
+            We are experts in trendy men's haircuts. We work quickly, carefully,
+            and tastefully.
+          </p>
+        </div>
       </section>
 
-      <section class="about-section">
-        <img
-          src="images/about-image-1.png"
-          alt="First Service"
-          width="270"
-          height="445"
-        />
-        <img
-          src="images/about-image-2.png"
-          alt="Second Service"
-          width="270"
-          height="445"
-        />
+      <section class="about-section section">
+        <div class="container">
+          <img
+            src="images/about-image-1.png"
+            alt="First Service"
+            width="270"
+            height="445"
+          />
+          <img
+            src="images/about-image-2.png"
+            alt="Second Service"
+            width="270"
+            height="445"
+          />
 
-        <span class="section-subtitle text-grey">
-          <img src="images/linie-orizonatala.png" alt="Horizontal line" /> ABOUT
-        </span>
-        <h2 class="section-title text-grey">
-          The Best Barbershop in Your City
-        </h2>
-        <h3 class="section-description">
-          If you want to add more confidence to your image, you are definitely
-          in the right place.
-        </h3>
-        <p class="section-paragraph">
-          We are a team that never rests on its laurels and yearns for change.
-          And once you fall into the hands of our master, you will never be the
-          same again. We are a team that is always on the same wavelength with
-          clients. Therefore, we are always ready to improve everyone who comes
-          to us!
-        </p>
-        <button class="primary-button text-grey">book a service</button>
+          <span class="section-subtitle text-grey">
+            <img src="images/linie-orizonatala.png" alt="Horizontal line" />
+            ABOUT
+          </span>
+          <h2 class="section-title text-grey">
+            The Best Barbershop in Your City
+          </h2>
+          <h3 class="section-description">
+            If you want to add more confidence to your image, you are definitely
+            in the right place.
+          </h3>
+          <p class="section-paragraph">
+            We are a team that never rests on its laurels and yearns for change.
+            And once you fall into the hands of our master, you will never be
+            the same again. We are a team that is always on the same wavelength
+            with clients. Therefore, we are always ready to improve everyone who
+            comes to us!
+          </p>
+          <button class="primary-button text-grey">book a service</button>
+        </div>
       </section>
 
-      <section class="services-section">
-        <span class="section-subtitle">
-          <img src="images/linie-orizonatala.png" alt="Horizontal line" />
-          Spend time in the company of the best craftsmen
-        </span>
-        <h2 class="section-title">Services and Prices</h2>
+      <section class="services-section section">
+        <div class="container">
+          <span class="section-subtitle">
+            <img src="images/linie-orizonatala.png" alt="Horizontal line" />
+            Spend time in the company of the best craftsmen
+          </span>
+          <h2 class="section-title">Services and Prices</h2>
 
-        <ul>
-          <li>
-            <span>Men's Haircut</span>
-            <span>from 300 UAH </span>
-          </li>
-          <li>
-            <span>Beard Trim</span>
-            <span>from 200 UAH</span>
-          </li>
-          <li>
-            <span>Mustache Trim</span>
-            <span>from 200 UAH</span>
-          </li>
-          <li>
-            <span>Straight Razor Shave</span>
-            <span>from 200 UAH</span>
-          </li>
-        </ul>
+          <ul>
+            <li>
+              <span>Men's Haircut</span>
+              <span>from 300 UAH </span>
+            </li>
+            <li>
+              <span>Beard Trim</span>
+              <span>from 200 UAH</span>
+            </li>
+            <li>
+              <span>Mustache Trim</span>
+              <span>from 200 UAH</span>
+            </li>
+            <li>
+              <span>Straight Razor Shave</span>
+              <span>from 200 UAH</span>
+            </li>
+          </ul>
 
-        <ul>
-          <li>
-            <span>Trainee Haircut </span>
-            <span>from 50 UAH </span>
-          </li>
-          <li>
-            <span>Buzz Cut</span>
-            <span>from 200 UAH </span>
-          </li>
-          <li>
-            <span>Kids Haircut (&lt;12 y.o.)</span>
-            <span>from 300 UAH </span>
-          </li>
-          <li>
-            <span>Gray Coverage</span>
-            <span>from 200 UAH </span>
-          </li>
-        </ul>
+          <ul>
+            <li>
+              <span>Trainee Haircut </span>
+              <span>from 50 UAH </span>
+            </li>
+            <li>
+              <span>Buzz Cut</span>
+              <span>from 200 UAH </span>
+            </li>
+            <li>
+              <span>Kids Haircut (&lt;12 y.o.)</span>
+              <span>from 300 UAH </span>
+            </li>
+            <li>
+              <span>Gray Coverage</span>
+              <span>from 200 UAH </span>
+            </li>
+          </ul>
 
-        <button type="button">Book a Service</button>
+          <button type="button">Book a Service</button>
+        </div>
       </section>
 
       <section>
